<resources>
    <string name="app_name">HobbyLobby</string>
    <string name="firebase_database">https://chatapppoc-b9a57.firebaseio.com</string>
    <string name="friends_list">friendsList</string>
    <string name="request_list">requestList</string>
    <string name="users">users</string>
    <string name="skills">skills</string>
    <string name="skill_name">name</string>
    <string name="skill_proficiency">proficiency</string>
    <string name="geolocation">geolocation</string>
    <string name="messages">messages</string>
    <string name="type_skill">Type skill</string>
    <string name="search_button">search button</string>
    <string name="registration_success">registration successful</string>
    <string name="password">password</string>
    <string name="user_exists">Username already exists!!</string>
    <string name="no_text">Can\'t be blank</string>
    <string name="alpha_numeric">only alphabet or number allowed</string>
    <string name="atleast_five_char">at least 5 characters long</string>
    <string name="user_not_found">User not found!</string>
    <string name="incorrect_password">Incorrect password!!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="error_get_location">Error occurred while getting the geo location of the logged in user</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="add">ADD</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="login">Login</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="search_friend">Search Friend</string>
    <string name="skillsTxt">Skills:</string>
    <string name="username">Name: </string>
    <string name="logout">Logout</string>
    <string name="add_skill">Add Skill</string>
    <string name="show_requests">Show Requests</string>
    <string name="friends">Friends</string>
    <string name="no_friends_found">No Friends Found!</string>
</resources>